apps/oxlint/src/snapshots/_--vitest-plugin -c fixtures__cli__eslintrc_vitest_replace__eslintrc.json fixtures__cli__eslintrc_vitest_replace__foo.test.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --vitest-plugin -c fixtures/cli/eslintrc_vitest_replace/eslintrc.json fixtures/cli/eslintrc_vitest_replace/foo.test.js
working directory: 
----------

  x eslint-plugin-jest(no-disabled-tests): Disabled test
   ,-[fixtures/cli/eslintrc_vitest_replace/foo.test.js:1:1]
 1 | test.skip('foo', () => {
   : ^^^^^^^^^
 2 |   // ...
   `----
  help: Remove the appending `.skip`

Found 0 warnings and 1 error.

Errors  Files
     1  fixtures/cli/eslintrc_vitest_replace/foo.test.js:1

Finished in <variable>ms on 1 file with 1 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
